# PersonalDWH

./: .gitignore  README.md
backend/: pyproject.toml  repomix-output.xml  telegram_session.session  telegram_session.session-journal
backend/src/: main.py
backend/src/api/: telegram.py
backend/src/core/: config.py  dependencies.py
backend/src/repositories/: telegram.py
backend/src/schemas/: telegram.py
backend/src/services/: telegram.py
front/: index.html  package-lock.json  package.json  repomix-output.xml
front/src/: App.tsx  index.css
front/src/components/layout/: Layout.tsx  Layout.tsx.new  Sidebar.tsx  Sidebar.tsx.new
front/src/components/telegram/: AIAssistant.tsx  ChatItem.tsx  ChatList.tsx  ChatSummaryView.tsx  ChatView.tsx  FilterTabs.tsx  MessageItem.tsx  PersonaMirrorView.tsx
front/src/data/: mockTelegramData.ts
front/src/pages/: TelegramPage.tsx
front/src/services/: AIAgentService.ts  TelegramApiService.ts
front/src/types/: telegram.ts
front/src/utils/: avatarUtils.tsx  dateUtils.ts
