[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "telethon>=1.28.5",
    "tiktoken>=0.9.0",
    "langchain-openai>=0.3.16",
    "trustcall>=0.0.26",
    "langchain>=0.3.25",
    "langgraph>=0.4.3",
]
